--- a/src/components/NavHeader/styles.css
+++ b/src/components/NavHeader/styles.css
@@ -22,7 +22,7 @@
   grid-row: 1/1;
 }
 
-.navLinks .links{
+.links{
   color: #1D201F;
   padding: 5px 10px;
   border-top: 1.5px solid transparent;
@@ -34,7 +34,7 @@
   transition: 0.3s ease-out;
 }
 
-.navLinks .links:hover{
+.links:hover{
   border: 1.5px solid #0f7480;
   box-shadow: -2px -3px transparent;
   transition: 0.3s ease-in;
